compiler/tests/ar/errors/extern_mod_misuse_ar.salam
// لغة: العربية
// EXPECT: modify
خارجي "C":
    مضمن دالة fabs(x عشري٦٤) عشري٦٤
نهاية

دالة الرئيسية:
    اطبع(fabs(0.0 - 1.0))
نهاية
